<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        android:id="@+id/backgroundItem"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/lightBlack">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/note_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                />
            <TextView
                android:id="@+id/tvSubNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_sub_title"
                android:textSize="@dimen/_12ssp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_3sdp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/Gray"
                android:ellipsize="end"
                />
            <ImageView
                android:id="@+id/imgNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textSize="@dimen/_12ssp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:fontFamily="@font/manrope_regular"
                android:textColor="@color/Gray"
                android:ellipsize="end"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>